tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/float/trailing-us-exp.stderr
TOML parse error at line 2, column 21
  |
2 | trailing-us-exp = 1_e2
  |                     ^
invalid integer
expected digit
